tika-openshift-deploymentconfig.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: tika-openshift-git
      app.kubernetes.io/component: tika-openshift-git
      app.kubernetes.io/instance: tika-openshift-git
      app.kubernetes.io/part-of: tika-openshift-git-app
    name: tika-openshift-git
    namespace: tika
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: tika-openshift-git
      deploymentconfig: tika-openshift-git
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: tika-openshift-git
          deploymentconfig: tika-openshift-git
      spec:
        containers:
        - image: apache/tika:docker 
          imagePullPolicy: Always
          name: tika-openshift-git
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
kind: List
